--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
         />
         <h1>Luna <span style="color: var(--primary)">Red</span></h1>
         <p class="subtitle">
-          19y | Fitness & Lifestyle | Miami 📍<br />The pear-shaped obsession
+          19y | A petite RedHead that you need to see more | Miami 📍<br />The pear-shaped obsession
           you've been looking for.
         </p>
       </header>
 
-      <p class="gallery-title">A Glimpse of my world</p>
+      <p class="gallery-title">My secret is your desire </p>
       <div class="gallery">
         <img
           src="https://i.ibb.co/gZfs43KQ/praia.jpg"
@@ -210,15 +210,15 @@
 
       <section class="pricing">
         <div class="card">
-          <h3>Daily Life Pack</h3>
+          <h3>Daily Life nude Pack</h3>
           <div class="price">$15<span> USD</span></div>
           <ul class="list">
-            <li>10 Exclusive Sexy Photos</li>
+            <li>10 Exclusive Sexy and Nude Photos</li>
             <li>2 Exclusive hot videos</li>
             <li>Full High-Resolution Access</li>
             <li>Digital delivery via e-mail</li>
           </ul>
-          <a href="SEU_LINK_PAYPAL_15" class="buy-btn">GET ACCESS</a>
+          <a href="https://www.paypal.com/ncp/payment/VC3QQF792RRTG" class="buy-btn">GET ACCESS</a>
         </div>
 
         <div class="card featured">
@@ -237,15 +237,15 @@
           >
             BEST VALUE
           </div>
-          <h3>VIP Full Access</h3>
+          <h3>Nude VIP Full Access</h3>
           <div class="price">$35<span> USD</span></div>
           <ul class="list">
-            <li>30+ Professional AI Photos</li>
+            <li>30+ Professional Nude Photos</li>
             <li>The "Mewtwo" Build Collection</li>
             <li>3 Exclusive Video Clips (4K)</li>
-            <li>Secret Telegram Group Invite</li>
+            <li>Acess to call with me</li>
           </ul>
-          <a href="SEU_LINK_PAYPAL_35" class="buy-btn">GET VIP ACCESS</a>
+          <a href="https://www.paypal.com/ncp/payment/Y753Y2569HUMS" class="buy-btn">GET VIP ACCESS</a>
         </div>
       </section>
 
@@ -258,3 +258,4 @@
     </div>
   </body>
 </html>
+
