--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <li>10 Exclusive Sexy and Nude Photos</li>
             <li>2 Exclusive hot videos</li>
             <li>Full High-Resolution Access</li>
-            <li>Digital delivery via e-mail</li>
+            <li>Your desire become true here</li>
           </ul>
           <a href="https://www.paypal.com/ncp/payment/VC3QQF792RRTG" class="buy-btn">GET ACCESS</a>
         </div>
@@ -243,7 +243,7 @@
             <li>30+ Professional Nude Photos</li>
             <li>The "Mewtwo" Build Collection</li>
             <li>3 Exclusive Video Clips (4K)</li>
-            <li>Acess to call with me</li>
+            <li>Access my best positions ♥</li>
           </ul>
           <a href="https://www.paypal.com/ncp/payment/Y753Y2569HUMS" class="buy-btn">GET VIP ACCESS</a>
         </div>
@@ -258,4 +258,5 @@
     </div>
   </body>
 </html>
+
 
