--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           alt="Luna at the beach"
         />
         <img
-          src="https://i.ibb.co/hRVRZHvJ/quarto2.jpg"
+          src="https://i.ibb.co/PJwYBf4/morro-a-melhor-blur.png"
           alt="Luna in her bedroom"
         />
         <img
@@ -258,5 +258,6 @@
     </div>
   </body>
 </html>
+
 
 
